<?xml version="1.0" encoding="utf-8"?>
        android:id="@+id/tvName"
        android:text="@string/enter_your_name"
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Activity_sign_up">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="italic"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/etName"
        android:textStyle="italic"
        android:hint="enter_name"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="italic"
        android:id="@+id/tvEmail"
        android:text="@string/enter_your_email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/etEmail"
        android:textStyle="italic"
        android:hint="enter_email"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="italic"
        android:id="@+id/tvPassword"
        android:text="@string/enter_password"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/etPassword"
        android:textStyle="italic"
        android:hint="@string/enter_password"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="italic"
        android:id="@+id/tvPassword1"
        android:text="@string/Reenter_password"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword1"
        android:textSize="24sp"
        android:textStyle="italic"
        android:hint="@string/Reenter_password"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPhone_number"
        android:textSize="24sp"
        android:textStyle="italic"
        android:text="@string/enter_your_Phone_number"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPhone_number"
        android:textSize="24sp"
        android:textStyle="italic"
        android:hint="@string/enter_Phone_number"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rgGender">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbShe"
            android:text="she"
            android:textSize="16sp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbHe"
            android:textSize="15sp"
            android:text="he"
            android:layout_marginLeft="15sp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbOthers"
            android:text="others"
            android:layout_marginLeft="15sp"
            />
    </RadioGroup>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etOthers"
            android:hint="@string/others"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:text="@string/SignUp"
            android:textSize="25sp"
            />
</LinearLayout>